tests/spec/build/snapshots/lowered_result_fn_arg_adapts_through_variadic_generic_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Resultant(arg int) (int, Face) {
	return arg, nil
}

func Resolve[R any, E any](default_ R, _ ...func(int) lisette.Result[R, E]) lisette.Result[R, E] {
	return lisette.MakeResultOk[R, E](default_)
}

func main() {
	cb := Resultant
	Resolve(0, func(arg0 int) lisette.Result[int, Face] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakeResultErr[int, Face](ret_1)
		}
		return lisette.MakeResultOk[int, Face](ret)
	})
}
