tests/spec/build/snapshots/lowered_result_lambda_arg_adapts_to_tagged_generic_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Resolve[T any, R any, E any](a T, f func(T) lisette.Result[R, E]) lisette.Result[R, E] {
	return f(a)
}

func main() {
	cb := func(x int) (int, Face) {
		return x, nil
	}
	Resolve(42, func(arg0 int) lisette.Result[int, Face] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakeResultErr[int, Face](ret_1)
		}
		return lisette.MakeResultOk[int, Face](ret)
	})
}
