tests/spec/build/snapshots/mixed_constrained_unconstrained_impl_blocks.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Printable interface {
	ToString() string
}

type Box[T any] struct {
	value T
}

func (b Box[T]) String() string {
	return fmt.Sprintf("Box { value: %v }", b.value)
}

func Box_print[T Printable](self Box[T]) {
	fmt.Println(self.value.ToString())
}

func (b Box[T]) get() T {
	return b.value
}

type Name struct {
	name string
}

func (n Name) String() string {
	return fmt.Sprintf("Name { name: %v }", n.name)
}

func (n Name) ToString() string {
	return n.name
}

func main() {
	b := Box[Name]{value: Name{name: "Alice"}}
	Box_print(b)
	b2 := Box[int]{value: 42}
	fmt.Printf("int box: %d\n", b2.get())
}
