tests/spec/build/snapshots/module_alias_used_in_type_references.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	u "github.com/user/myproject/models/user"
)

func main() {
	alice := u.New("Alice")
	users := []u.User{alice}
	fmt.Println(users)
}


// === models/user/user.go ===
package user

type User struct {
	Name string
}

func New(name string) User {
	return User{Name: name}
}
