tests/spec/build/snapshots/module_name_go_keyword.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import t "github.com/user/myproject/type"

func main() {
	_ = t.Foo()
}


// === type/mod.go ===
package type_

func Foo() int {
	return 1
}
