tests/spec/build/snapshots/multi_file_module_sibling_visibility.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func main() {
	p := Point_new(3.0, 4.0)
	_ = p.x + p.y
}


// === point.go ===
package main

type Point struct {
	x float64
	y float64
}

func Point_new(x, y float64) Point {
	return Point{
		x: x,
		y: y,
	}
}
